invoicer-https-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invoicer
spec:
  selector:
    app: invoicer
    tier: frontend
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
